fixed overflow problem

--- a/gmgc/static/metronic_src/assets/demo/default/base/style.bundle.css
+++ b/gmgc/static/metronic_src/assets/demo/default/base/style.bundle.css
@@ -1348,8 +1348,10 @@ pre {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  background-color: transparent; }
-
+  background-color: transparent; 
+  table-layout: fixed;
+}
+  
   .table th {
     width: 25%;
     padding: 0.75rem;
